// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiSubmitButton Baseline HTML attributes are rendered 1`] = `
<input
  aria-label="aria label"
  class="kuiButton testClass1 testClass2 kuiButton-isDisabled"
  data-test-subj="test subject string"
  disabled=""
  type="submit"
/>
`;

exports[`KuiSubmitButton Baseline is rendered 1`] = `
<input
  class="kuiButton"
  type="submit"
/>
`;

exports[`KuiSubmitButton HTML attributes aria-label is rendered 1`] = `
<input
  aria-label="aria label"
  class="kuiButton"
  type="submit"
/>
`;

exports[`KuiSubmitButton HTML attributes className renders the classes 1`] = `
<input
  class="kuiButton testClass1 testClass2"
  type="submit"
/>
`;

exports[`KuiSubmitButton HTML attributes data-test-subj is rendered 1`] = `
<input
  class="kuiButton"
  data-test-subj="test subject string"
  type="submit"
/>
`;

exports[`KuiSubmitButton HTML attributes disabled sets the disabled attribute and class 1`] = `
<input
  class="kuiButton kuiButton-isDisabled"
  disabled=""
  type="submit"
/>
`;

exports[`KuiSubmitButton Props children is rendered as value 1`] = `
<input
  class="kuiButton"
  type="submit"
  value="Hello"
/>
`;

exports[`KuiSubmitButton Props type basic renders the basic class 1`] = `
<input
  class="kuiButton kuiButton--basic"
  type="submit"
/>
`;

exports[`KuiSubmitButton Props type danger renders the danger class 1`] = `
<input
  class="kuiButton kuiButton--danger"
  type="submit"
/>
`;

exports[`KuiSubmitButton Props type hollow renders the hollow class 1`] = `
<input
  class="kuiButton kuiButton--hollow"
  type="submit"
/>
`;

exports[`KuiSubmitButton Props type primary renders the primary class 1`] = `
<input
  class="kuiButton kuiButton--primary"
  type="submit"
/>
`;
